[gd_scene load_steps=24 format=2]

[ext_resource path="res://GUI/GameHUD_Font_Settings.tres" type="DynamicFont" id=1]
[ext_resource path="res://StartScreen/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://Audio/Music/MerchantsMain.wav" type="AudioStream" id=3]
[ext_resource path="res://SharedResources/Models/Resources/wheat1.material" type="Material" id=4]
[ext_resource path="res://EndScreenCharacters/Queen.glb" type="PackedScene" id=5]
[ext_resource path="res://SharedResources/Models/Resources/incense.glb" type="PackedScene" id=6]
[ext_resource path="res://SharedResources/Models/Resources/grapes.glb" type="PackedScene" id=7]
[ext_resource path="res://EndScreenCharacters/Maid.glb" type="PackedScene" id=8]
[ext_resource path="res://SharedResources/Models/Resources/gold.glb" type="PackedScene" id=9]
[ext_resource path="res://EndScreenCharacters/Jester.glb" type="PackedScene" id=10]
[ext_resource path="res://EndScreenCharacters/King.glb" type="PackedScene" id=11]
[ext_resource path="res://EndScreenCharacters/Monk.glb" type="PackedScene" id=12]
[ext_resource path="res://GameBoard/Board.tscn" type="PackedScene" id=13]
[ext_resource path="res://SharedResources/Models/Characters/merchantToken2.tscn" type="PackedScene" id=14]
[ext_resource path="res://SharedResources/Models/Resources/c6505a.material" type="Material" id=15]
[ext_resource path="res://SharedResources/Models/Resources/Grapes2.material" type="Material" id=16]
[ext_resource path="res://SharedResources/Fonts/EB_Garamond/EBGaramond-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://GUI/Theme/ui_theme.tres" type="Theme" id=18]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.885023, 2.47216, 0.0190837 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -15.6478, 154.898, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "starting_anim"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.885023, 2.47216, 0.0190837 ), Vector3( 0.027, 1.637, 0.019 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -15.6478, 154.898, 0 ), Vector3( -6.5, 109.898, 0 ) ]
}

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 18 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -257.0
margin_right = 344.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 16.0
margin_top = 12.0
margin_right = 328.0
margin_bottom = 244.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 312.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "MERCHANTS OF MIE"
align = 1
valign = 1

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 312.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
text = "New Game"

[node name="SettingsButton" type="MenuButton" parent="CenterContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 312.0
margin_bottom = 169.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"
flat = false

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 312.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="Listener" type="Listener" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Spatial" type="Spatial" parent="."]

[node name="WinningCutScene" type="Spatial" parent="Spatial"]

[node name="Jester" parent="Spatial/WinningCutScene" instance=ExtResource( 10 )]
transform = Transform( 0.172747, 0, -0.46921, 0, 0.5, 0, 0.46921, 0, 0.172747, -4.36265, 1.33329, 1.61084 )

[node name="King" parent="Spatial/WinningCutScene" instance=ExtResource( 11 )]
transform = Transform( -8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, -1.921, 2.35228, 1.75434 )

[node name="Maid" parent="Spatial/WinningCutScene" instance=ExtResource( 8 )]
transform = Transform( -0.258391, 0, -0.458014, 0, 0.4, 0, 0.305343, 0, -0.387587, -6.42696, 1.14321, -0.748771 )

[node name="Monk" parent="Spatial/WinningCutScene" instance=ExtResource( 12 )]
transform = Transform( -0.253386, 0, 0.43104, 0, 0.5, 0, -0.43104, 0, -0.253386, -1.18207, 1.24819, 2.29191 )

[node name="Queen" parent="Spatial/WinningCutScene" instance=ExtResource( 5 )]
transform = Transform( -2.18557e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.18557e-08, -2.48204, 1.62474, -0.977616 )

[node name="CSGBox" type="CSGBox" parent="Spatial/WinningCutScene"]
width = 20.0
height = 0.25
depth = 10.0
material = ExtResource( 15 )

[node name="CSGBox9" type="CSGBox" parent="Spatial/WinningCutScene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.82422, 0 )
width = 20.0
height = 0.25
depth = 10.0
material = ExtResource( 4 )

[node name="CSGBox3" type="CSGBox" parent="Spatial/WinningCutScene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.99334, 4.82899 )
width = 20.0
height = 6.0
depth = 0.5
material = ExtResource( 4 )

[node name="CSGBox5" type="CSGBox" parent="Spatial/WinningCutScene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.76927, 2.99334, 3.05153 )
width = 0.2
height = 6.0
depth = 3.0
material = ExtResource( 4 )

[node name="CSGBox6" type="CSGBox" parent="Spatial/WinningCutScene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.76927, 2.99334, -3.47447 )
width = 0.2
height = 6.0
depth = 3.0
material = ExtResource( 4 )

[node name="CSGBox7" type="CSGBox" parent="Spatial/WinningCutScene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.76927, 5.48141, -0.270167 )
width = 0.2
height = 1.0
depth = 4.0
material = ExtResource( 4 )

[node name="CSGBox8" type="CSGBox" parent="Spatial/WinningCutScene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.76927, 0.66363, -0.270167 )
width = 0.2
height = 1.0
depth = 4.0
material = ExtResource( 4 )

[node name="CSGBox4" type="CSGBox" parent="Spatial/WinningCutScene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.99334, -5.15349 )
width = 20.0
height = 6.0
depth = 0.5
material = ExtResource( 4 )

[node name="CSGBox2" type="CSGBox" parent="Spatial/WinningCutScene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.56154, -0.0351874, 0.527562 )
width = 10.0
height = 1.4
material = ExtResource( 16 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.905554, -0.114425, 0.408508, 0, 0.962938, 0.269723, -0.424231, 0.244249, -0.871992, 0.885023, 2.47216, 0.0190837 )

[node name="CameraAnimation" type="AnimationPlayer" parent="Camera"]
anims/RESET = SubResource( 4 )
anims/starting_anim = SubResource( 5 )

[node name="Board" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, -2.72849, 0.708526, 0.528655 )

[node name="merchant" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.0719206, 0, -0.0694796, 0, 0.1, 0, 0.0694796, 0, 0.0719206, -2.11325, 0.694588, 0 )

[node name="merchant2" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.0719206, 0, -0.0694796, 0, 0.1, 0, 0.0694796, 0, 0.0719206, -2.43894, 0.694588, 0.855602 )

[node name="merchant3" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.0719206, 0, -0.0694796, 0, 0.1, 0, 0.0694796, 0, 0.0719206, -3.0786, 0.694588, 0.780333 )

[node name="grapes" parent="." instance=ExtResource( 7 )]
transform = Transform( -0.00749961, 0, -0.0997184, 0, 0.1, 0, 0.0997184, 0, -0.00749961, -2.7434, 0.708879, 0.295837 )

[node name="gold" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.05, -3.26603, 0.708879, 0.506463 )

[node name="incense" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -2.29569, 0.706793, 0.561796 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
